--- a/maze-generator/styles.css
+++ b/maze-generator/styles.css
@@ -33,16 +33,10 @@ aside {
 
 #bindings {
     font-family: cursive;
-    margin-top: 32px;
+    padding-top: 16px;
+    border-top: 2px solid #858585;
+    margin-top: 16px;
     grid-template-columns: 1fr 1fr;
-}
-
-#bindings kbd {
-    font-weight: bold;
-    padding: 4px 12px;
-    border-radius: 2px;
-    border: 2px solid #858585;
-    margin-right: 8px;
 }
 
 .input-block label {
@@ -62,6 +56,14 @@ aside {
     width: 100%;
     padding-block: 7px 8px;
     cursor: pointer;
+}
+
+#bindings kbd {
+    font-weight: bold;
+    padding: 4px 12px;
+    border-radius: 2px;
+    border: 2px solid #858585;
+    margin-right: 8px;
 }
 
 main::before {
